[metadata]
name = pydgin
version = 1.0.0
description = Minimial version of pydgin, an instruction set simulator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igrr/pydgin-min
license = BSD-3-Clause
license_file = LICENSE

[options]
packages = find:
install_requires =
    pyelftools==0.26
python_requires = >=3.6

[bdist_wheel]
universal = True
